static/css/listings.css
.bil {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
}

.listings-container {
    padding: 0 5%;
}

.listings-total {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    max-width: 1440px;
    margin: 0 auto;
}

.listing {
    display: flex;
    flex-direction: column;
    max-width: 320px;
    height: 488px;
    margin: 0 2% 4rem 2%;
    border-radius: 10px;
    padding: 1rem 2%;
}

.listing-top section {
    margin-bottom: 1rem;
}

.listing-top img {
    width: 300px;
    height: 144px;
    background-repeat: no-repeat;
    background-position: center top;
    background-size: cover;
    object-fit: contain;
}

.listing h3 {
    font-size: 20px;
    line-height: 32px;
    text-align: center;
}

.listing div {
    display: flex;
    flex-direction: row;
    margin: .5rem 0;
}

.listing div p {
    line-height: 24px;
}

.listing div p, .listing div i {
    margin-right: .5rem;
}

.listing div i {
    font-size: 14px;
    line-height: 24px;
    width: 16px;
}

.listing-button a {
    border-radius: 5px;
    font-size: 20px;
    line-height: 40px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 700;
    color: #000 !important;
    width: 100%;
}

.nav-listings {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 6rem;
}

.pag-num, .pag-btn {
    font-size: 16px;
    line-height: 24px;
    margin: 0 1rem;
    cursor: pointer;
    height: 2.5rem;
    width: 2.5rem;
    font-weight: 500;
    border-radius: 5px;
}

.hidden {
    display: none;
}


/*LISTING*/

.back-to-listings {
    max-width: 1440px;
    margin-left: 2%;
    margin: 0 auto;
    padding-left: 2%;
    padding-top: 2rem;
    display: flex;    
}

.back-to-listings button {
    font-size: 20px;
    line-height: 40px;
    font-weight: 700;
    font-family: 'Open Sans', sans-serif;
    border-bottom: 4px solid transparent;
    background-color: transparent;
    padding: 0;
}

.back-to-listings button:hover {
    border-bottom: 4px solid;
    transition: .4s ease-in-out;
}

.listing-container {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    max-width: 1200px;
    margin: 0 auto;
}

.listing-container .listing {
    max-width: 800px;
    height: auto;
}

.listing-container .listing div {
    margin: 1rem 0;
}

.inquiry-contact {
    display: flex;
    flex-direction: row;
}

.listing-description {
    margin-bottom: 2rem !important;
}

.listing-description i {
    margin-right: 1rem !important;
}

.listing-container .listing-photo-main img {
    width: 100%;
    max-width: 800px;
    height: auto;
}

.listing-photos-other-container ul {
    display: flex;
    list-style: none;
}

.listing-container .listing-photos-other img {
    width: 100%;
    max-width: 800px;
    max-height: 300px;
    cursor: pointer;
}

.make-inquiry {
    width: 250px;
    height: 240px;
    border-radius: 10px;
    padding: 1rem 2%;
    margin-bottom: 4rem;
}

.inquiry-contact-header {
    display: flex;
    flex-direction: row;
    border-bottom: 2px solid;
}

.inquiry-contact-header i {
    font-size: 32px;
    line-height: 64px;
    margin-right: 1rem;
}

.make-inquiry h2 {
    font-size: 32px;
    line-height: 64px;
}

.make-inquiry img {
    width: 40px;
    height: auto;
    border-radius: 50%;
    margin-right: -.5rem;
}

.inquiry-contact h3 {
    font-size: 16px;
    line-height: 40px;
    font-weight: 500;
}

.make-inquiry-btn button {
    width: 100%;
    border-radius: 5px;
    font-size: 16px;
    line-height: 32px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 700;
}

.similar-listings {
    max-width: 1200px;
    margin: 0 auto;
}

/*PHOTOS MODAL*/

.listing-photos-modal, .inquiry-modal {
    display: none;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background: rgb(0, 0, 0);
    background: rgba(0, 0, 0, 0.5);
}

.modal-content {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.close-modal {
    position: absolute;
    top: 96px;
    right: 2rem;
    font-size: 32px;
    line-height: 32px;
    font-weight: 700;
    border-radius: 5px;
}

.close-modal:hover {
    color: #999;
    cursor: pointer;
}

.listing-container .modal-slide img {
    width: 100%;
    max-width: 1200px;
    height: auto;
    animation-name: modalSlideUp;
    animation-duration: .7s;
}

.prev-modal, .next-modal {
    cursor: pointer;
    position: absolute;
    top: 50%;
    font-size: 32px;
    line-height: 48px;
    width: 48px;
    height: auto;
    display: flex;
    margin: 0 auto;
    justify-content: center;
    font-weight: 700;
    border-radius: 5px;
}

.next-modal {
    right: 0;
}

.prev-modal:hover, .next-modal:hover {
    background-color: #666;
    color: #fff;
}

/*INQUIRY MODAL*/

.inquiry-form {
    width: 600px;
    max-height: 600px;
    margin: 5% auto 2rem;
    justify-content: center;
    animation-name: modalSlideUp;
    animation-duration: .7s;
    padding: 1rem 2%;
    border-radius: 10px;
    overflow-y: auto;
    position: relative;
}

@keyframes modalSlideUp {
    0% {
        transform: translateY(1500px);
    }
    100% {
        transform: translateY(0);
    }
}

.inquiry-form .close-modal {
    position: absolute;
    top: 1rem;
    right: 1rem;
    font-size: 24px;
    line-height: 24px;
}

.not-logreg {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.sorry-face i {
    font-size: 120px;
    line-height: 120px;
}

.not-logreg p {
    text-align: center;
    font-size: 20px;
    line-height: 40px;
}

.not-logreg p:first-of-type {
    font-style: italic;
}

.leave-inquiry-links {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    margin-top: 2rem;
    justify-content: center;
    text-align: center;
    width: 100%;
    font-weight: 700;
    font-family: 'Open Sans', sans-serif;
}

.leave-inquiry-links a {
    font-size: 20px;
    line-height: 40px;
    margin: .5rem 0;
    width: 100%;
    border-radius: 5px;
}

.leave-inquiry-links a:hover {
    opacity: .5;
}

.leave-inquiry-links i {
    margin-right: .5rem;
    font-size: 20px;
    line-height: 40px;
}


@media only screen and (max-width: 1099px) {
    .close-modal {
        top: 88px;
    }

    .listing-container {
        padding: 0 5%;
    }
    
    .listing-container .listing {
        margin: 0 0 2rem 0;
    }

    .make-inquiry {
        width: 100%;
        max-width: 800px;
    }
}

@media only screen and (max-width: 576px) {
    .listing, .make-inquiry  {
        padding: 1rem 5%;
    }

    .inquiry-form {
        margin: 5% 5% 5% 2rem;
        padding: 1rem 5%;
    }
}

